src/less/main.less
@black: #222222;
@white: #fbfbfb;
@lightgreen: #95eb95;
@darkgreen: #3aa53a;
@quick: .2s;
@slow: .6s;

.transition(@speed: @quick) { transition: all @speed ease-in-out; }
.box-shadow(@blur: 25px) { box-shadow: 0 2px @blur 0 rgba(0, 0, 0, 0.6); }

body {
  margin: 0;
  padding: 0;
  background-color: @white;
  color: @black;
  font-family: 'Montserrat', 'Helvetica Neue', sans-serif;
  font-weight: 300;
}

img { max-width: 100%; }

h1, h2, h3, h4, h5, h6 { font-family: 'Rammetto One'; }

h1, h2, h3 { border-bottom: 4px solid @lightgreen; }

hr {
  border: 0;
  border-bottom: 1px solid @darkgreen;
  width: 80%;
}

a, a:focus, a:active, a:visited {
  .transition;
  color: @darkgreen;

  &:hover { color: lighten(@darkgreen, 20%); }
}

iframe { border: none; }

#spotify-plugin {
  min-height: 380px;
  height: 40vh;
  min-width: 300px;
  width: 30%;
}

.caption {
  text-align: center;
  padding: 1rem;
  color: gray;
}

.divider-img-wrapper {
  width: 70%;
  @media (max-width: 768px) {
    width: 100%;
  }
  height: 40vh;
  margin: 0 auto;

  background-position: center;
  background-size: cover;
  position: relative;

  .box-shadow;

  .attribution {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.8);
    color: @white;
    text-align: right;
    padding: 1rem;
    bottom: 0;
    right: 0;
    font-size: 0.8rem;
    border-radius: 1rem 0 0;

    &::before { content: '📷 '; }
  }
}

.divider-img-wrapper-full {
  .divider-img-wrapper;
  width: 100%;
  height: 90vh;
}

.wrapper {
  height: 100%;
  max-width: 100%;
  -js-display: flex; // Try fixing IE
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.main {
  -js-display: flex; // Try fixing IE
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  > *:not(.divider-img-wrapper-full) {
    max-width: 60%;
    @media (max-width: 768px) {
      max-width: 80%;
    }
  }

  .directions {
    max-width: 80%;
    -js-display: flex; // Try fixing IE
    display: flex;
    justify-content: center;
    align-items: center;
    @media (max-width: 768px) {
      flex-direction: column;
    }

    > div { padding: 0 1rem; }

    > #map, iframe {
      height: 500px;
      max-height: 50vh;
      width: 500px;
      min-width: 40%;
      @media (max-width: 768px) {
        width: 80%;
      }

      border: none;
    }
  }
}

.section {
  padding: 1rem;
  margin: 2rem 0;
}

.program {
  td {
    padding: 0.5rem;
    font-size: 1.5rem;

    &.time { font-size: 2rem; }
  }
}

.artists {
  min-width: 60%;
  @media (max-width: 768px) {
    min-width: 80%;
  }
}

.artists-list {
  width: 100%;
  display: flex;
  -js-display: flex; // Try fixing IE
  flex-direction: column;
  justify-content: center;

  .artist {
    position: relative;

    padding: 0 1rem 1rem 1rem;
    margin: 0.5rem auto;
    width: 80%;
    height: 30vh;
    @media (min-width: 768px) {
      height: 35vh;
    }

    color: @white;
    text-shadow: @black 1px 1px 10px;
    .box-shadow(10px);

    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

    cursor: pointer;

    h3 { display: inline-block; }

    @media (min-width: 768px) {
      &:hover {
        .show-more-button { transform: translateY(3px); }
      }
    }

    .show-more-button {
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      padding: 0.5rem;

      text-align: center;
      font-size: 1.5rem;
      color: @white;
      text-shadow: @black 3px 3px 4px;

      cursor: pointer;

      .transition;

      &:not(.open)::after { content: '👇' }
      &.open::after { content: '☝️' }
    }
  }


  .artist-bio {
    padding: 0 1rem;
    display: none;
  }
}

header {
  height: 100vh;
  @media (max-width: 768px) {
    height: 90vh;
  }
  width: 100%;
  position: relative;

  -js-display: flex; // Try fixing IE
  display: flex;
  justify-content: center;
  align-items: center;
  .box-shadow;

  margin-bottom: 1rem;

  overflow: hidden;
  background-color: #000000;

  .date {
    color: @white;
    position: absolute;
    bottom: 0;
  }

  #logo {
    position: absolute;
    height: 80%;
    width: 50%;
    @media (max-width: 768px) {
      height: 90%;
      width: 80%;
    }

    background-image: url('/images/logo-2018-mm-transparent.png');
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
  }
}

footer { padding: 1rem; }

#countdown {
  margin-top: 2rem;
  margin-bottom: -2rem;
  width: 100%;
}

